<resources>
    <string name="app_name">LuyenThiDongNai</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="discussion">Discussion</string>
    <string name="online_test">Online Test</string>
    <string name="regulation">Regulation</string>
    <string name="introduction">Introduction</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="facebook_app_id" translatable="false">819682678373142</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb819682678373142</string>
    <string name="nav_header_title">Hello!</string>
    <string name="nav_header_subtitle">Name</string>
    <string name="recreation">Entertainment</string>

</resources>
