<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_discuss"
            android:title="@string/discussion" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_exam"
            android:title="@string/online_test" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_emoticon_black"
            android:title="@string/recreation" />
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/regulation" />-->
        <!--<item-->
            <!--android:id="@+id/nav_gioi_thieu"-->
            <!--android:icon="@drawable/ic_menu_share"-->
            <!--android:title="@string/introduction" />-->
    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        </menu>
    </item>
</menu>
